--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Israel Anesu Ndamuka</title>
 
+    <!-- Box icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+
+    <!-- Style -->
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <!-- Header -->
    <header class="header">
-        <a href="#" class="logo">Israel Anesu Ndamuka</a>
+        <a href="#" class="logo">Israel.</a>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -18,8 +24,32 @@
             <a href="#work">My Work</a>
             <a href="#contact">Contact</a>
         </nav>
+        <div class="bx bx-moon" id="darkMode-icon"></div>
    </header>
 
+   <!-- Home -->
+   <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, I am</h3>
+            <h1>Israel</h1>
+            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quas, aut totam ratione nihil, ducimus odio itaque assumenda culpa voluptatum ipsam, harum ab laborum adipisci tempora debitis temporibus minus sapiente.</P>
+
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-facebook-square' ></i></a>
+                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="#"><i class='bx bxl-stack-overflow' ></i></a>
+                <a href="#"><i class='bx bxl-github' ></i></a>
+            </div>
+            <a href="#" class="btn">Download Resume</a>
+        </div>
+        
+        <div class="profession-container">
+            <div class="profession-box">
+                <div class="profession"></div>
+            </div>
+        </div>
+        
+   </section>
 
 
 
