--- a/index.html
+++ b/index.html
@@ -45,8 +45,25 @@
         
         <div class="profession-container">
             <div class="profession-box">
-                <div class="profession"></div>
+                <div class="profession" style="--i:0;">
+                    <i class='bx bx-code-block'></i>
+                    <h3>Software Developer</h3>
+                </div>
+                <div class="profession" style="--i:1;">
+                    <i class='bx bx-test-tube' ></i>
+                    <h3>Web 3.0 Developer</h3>
+                </div>
+                <div class="profession" style="--i:2;">
+                    <i class='bx bxl-python' ></i>
+                    <h3>Python Enthusiast</h3>
+                </div>
+                <div class="profession" style="--i:3;">
+                    <i class='bx bxs-flag-checkered' ></i>
+                    <h3>Formula1 Fun</h3>
+                </div>
+                <div class="circle"></div>
             </div>
+            <div class="overlay"></div>
         </div>
         
    </section>
