--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#about">About Me</a>
+            <a href="#about">About</a>
             <a href="#experience">Experience</a>
             <a href="#work">My Work</a>
             <a href="#contact">Contact</a>
@@ -30,10 +30,8 @@
    <!-- Home -->
    <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, I am</h3>
-            <h1>Israel</h1>
-            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis quas, aut totam ratione nihil, ducimus odio itaque assumenda culpa voluptatum ipsam, harum ab laborum adipisci tempora debitis temporibus minus sapiente.</P>
-
+            <!-- <h3>Hello, I'm</h3> -->
+            <h1>Israel Anesu Ndamuka</h1>
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook-square' ></i></a>
                 <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
@@ -47,7 +45,7 @@
             <div class="profession-box">
                 <div class="profession" style="--i:0;">
                     <i class='bx bx-code-block'></i>
-                    <h3>Software Developer</h3>
+                    <h3>Software Engineer</h3>
                 </div>
                 <div class="profession" style="--i:1;">
                     <i class='bx bx-test-tube' ></i>
@@ -65,16 +63,23 @@
             </div>
             <div class="overlay"></div>
         </div>
-        
+        <div class="home-img">
+            <img src="img/home-img.png" alt="">
+        </div>     
    </section>
-
-
-
-
-
-
-
-
+   <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about-img2.png" alt="">
+        </div>
+        <div class="about-content">
+            <h2 class="heading">About<span> Me</span></h2>
+            <h3>Hello, I'm Here To Help Your Next Project!</h3>
+            <p>My name is Israel, I'm a creative and desciplined individual with technical, analytical, and problem-solving skills.
+                 I constantly brainstorm, seek out and implement innovative solutions to everyday problems. I'm highly motivated
+                to expand and enhance my skillset through challenging projects and tasks and also to prove my value and talent. </p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+   </section>
     <script src="script/script.js"></script>
 </body>
 </html>
