--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="about-content">
             <h2 class="heading">About<span> Me</span></h2>
-            <h3>Hello, I'm Here To Help Your Next Project!</h3>
+            <!-- <h3>Hello, I'm Here To Help Your Next Project!</h3> -->
             <p>My name is Israel, I'm a creative and desciplined individual with technical, analytical, and problem-solving skills.
                  I constantly brainstorm, seek out and implement innovative solutions to everyday problems. I'm highly motivated
                 to expand and enhance my skillset through challenging projects and tasks and also to prove my value and talent. </p>
