--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <img src="img/home-img.png" alt="">
         </div>     
    </section>
+
    <section class="about" id="about">
         <div class="about-img">
             <img src="img/about-img2.png" alt="">
@@ -80,6 +81,30 @@
             <a href="#" class="btn">Read More</a>
         </div>
    </section>
-    <script src="script/script.js"></script>
+
+   <section class="services" id="services">
+        <h2 class="heading">Professional <span>Work</span> Experience</h2>
+            <div class="services-container">
+                <div class="services-box">
+                    <i class='bx bxs-briefcase-alt-2'></i>
+                    <h3>Cloud Zhet</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia, repellendus officiis voluptates natus nisi libero quam autem facilis, repellat quisquam ad quidem accusantium consectetur qui, necessitatibus aspernatur recusandae corporis.</p>
+                    <!-- <a href="#" class="btn">ReadMore</a> -->
+                </div>
+                <div class="services-box">
+                    <i class='bx bxs-briefcase-alt-2'></i>
+                    <h3>Modern Learning Solutions</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia, repellendus officiis voluptates natus nisi libero quam autem facilis, repellat quisquam ad quidem accusantium consectetur qui, necessitatibus aspernatur recusandae corporis.</p>
+                    <!-- <a href="#" class="btn">ReadMore</a> -->
+                </div>
+                <div class="services-box">
+                    <i class='bx bxs-briefcase-alt-2'></i>
+                    <h3>Velocity inc Technology</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia, repellendus officiis voluptates natus nisi libero quam autem facilis, repellat quisquam ad quidem accusantium consectetur qui, necessitatibus aspernatur recusandae corporis.</p>
+                    <!-- <a href="#" class="btn">ReadMore</a> -->
+                </div>
+            </div>
+   </section>
+<script src="script/script.js"></script>
 </body>
 </html>
