--- a/index.html
+++ b/index.html
@@ -165,7 +165,23 @@
             
             </div>
     </section>
-</section>
+
+    <section class="contact" id="contact">
+        <h2 class="heading"><span>Contact</span> Me</h2>
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Phone Number">
+                <input type="email" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
+    </section>
+
 <script src="script/script.js"></script>
 </body>
 </html>
