--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#experience">Experience</a>
-            <a href="#work">My Work</a>
+            <a href="#services">Experience</a>
+            <a href="#portfolio">My Work</a>
             <a href="#contact">Contact</a>
         </nav>
         <div class="bx bx-moon" id="darkMode-icon"></div>
+        <div class="bx bx-menu" id="menu-icon"></div>
    </header>
 
    <!-- Home -->
@@ -181,6 +182,15 @@
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 Israel | All Rights Reserved</p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+        </div>
+    </footer>
 
 <script src="script/script.js"></script>
 </body>
